Bug 195011 - key socket may fail to allocate sav for ipv6.
Summary: key socket may fail to allocate sav for ipv6.
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: kern (show other bugs)
Version: 9.1-RELEASE
Hardware: Any Any
: --- Affects Only Me
Assignee: Andrey V. Elsukov
URL:
Keywords: patch
Depends on:
Blocks:
 
Reported: 2014-11-14 16:02 UTC by bettina
Modified: 2015-03-14 14:47 UTC (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description bettina 2014-11-14 16:02:21 UTC
sys/netipsec/key.c has a typo (extra '&') in key_ismyaddr6 routine where 

          if (key_sockaddrcmp((struct sockaddr *)&sin6,

should be 

          if (key_sockaddrcmp((struct sockaddr *)sin6,
Comment 1 commit-hook freebsd_committer freebsd_triage 2015-03-07 18:45:41 UTC
A commit references this bug:

Author: ae
Date: Sat Mar  7 18:44:53 UTC 2015
New revision: 279735
URL: https://svnweb.freebsd.org/changeset/base/279735

Log:
  Remove extra '&'. sin6 is already a pointer.

  PR:		195011
  MFC after:	1 week

Changes:
  head/sys/netipsec/key.c
Comment 2 commit-hook freebsd_committer freebsd_triage 2015-03-14 14:38:32 UTC
A commit references this bug:

Author: ae
Date: Sat Mar 14 14:38:26 UTC 2015
New revision: 279989
URL: https://svnweb.freebsd.org/changeset/base/279989

Log:
  MFC r279735:
    Remove extra '&'. sin6 is already a pointer.

  PR:		195011

Changes:
_U  stable/10/
  stable/10/sys/netipsec/key.c
Comment 3 commit-hook freebsd_committer freebsd_triage 2015-03-14 14:46:35 UTC
A commit references this bug:

Author: ae
Date: Sat Mar 14 14:46:10 UTC 2015
New revision: 279991
URL: https://svnweb.freebsd.org/changeset/base/279991

Log:
  MFC r279735:
    Remove extra '&'. sin6 is already a pointer.

  PR:		195011

Changes:
_U  stable/9/sys/
  stable/9/sys/netipsec/key.c
Comment 4 Andrey V. Elsukov freebsd_committer freebsd_triage 2015-03-14 14:47:33 UTC
Fixed in head/, stable/10 and stable/9. Thanks!