MFC r279735:   Remove extra '&'. sin6 is already a pointer.

PR:		195011

Former-commit-id: 06c61aa7ebb6d96a10be91a0ac6d53b6025556f4