sys/netipsec/key.c
@@ -18429,7 +18429,6 @@ expr|struct
 name|sockaddr
 operator|*
 operator|)
-operator|&
 name|sin6
 argument_list|,
 operator|(
